--- a/projects/project2/user/src/main/java/edu/gvsu/cis/campbjos/ftp/layout.fxml
+++ b/projects/project2/user/src/main/java/edu/gvsu/cis/campbjos/ftp/layout.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<GridPane alignment="center" hgap="10" prefHeight="551.0" prefWidth="797.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="10" prefHeight="551.0" prefWidth="797.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.gvsu.cis.campbjos.ftp.Controller">
    <columnConstraints>
       <ColumnConstraints minWidth="10.0" percentWidth="100.0" prefWidth="100.0" />
    </columnConstraints>
@@ -127,7 +127,7 @@
                </children>
                <padding>
                   <Insets left="35.0" top="10.0" />
-               </padding
+               </padding>
             </HBox>
             <HBox prefHeight="200.0" prefWidth="200.0">
                <children>
