Add close action, connection indicator

--- a/projects/project2/user/src/main/resources/layout.fxml
+++ b/projects/project2/user/src/main/resources/layout.fxml
@@ -2,8 +2,9 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.Circle?>
 <GridPane alignment="center" hgap="10" prefHeight="551.0" prefWidth="797.0" vgap="10"
           xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1"
           fx:controller="edu.gvsu.cis.campbjos.ftp.Controller">
@@ -36,7 +37,7 @@
                         <Label text="Hostname"/>
                         <TextArea fx:id="hostname" layoutX="10.0" layoutY="10.0" maxHeight="-Infinity"
                                   maxWidth="-Infinity" minHeight="10.0" minWidth="50.0" prefHeight="25.0"
-                                  prefWidth="244.0"/>
+                                  prefWidth="224.0"/>
                         <Label text="Speed"/>
                         <ChoiceBox fx:id="speed" prefWidth="150.0"/>
                     </children>
@@ -48,11 +49,17 @@
                     <children>
                         <Label text="Server Hostname"/>
                         <TextArea fx:id="serverHostname" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="10.0"
-                                  minWidth="10.0" prefHeight="25.0" prefWidth="455.0"/>
+                                  minWidth="10.0" prefHeight="25.0" prefWidth="379.0"/>
                         <Label text="Port"/>
                         <TextArea fx:id="port" layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity"
                                   minHeight="25.0" minWidth="70.0" prefHeight="25.0" prefWidth="70.0"/>
                         <Button fx:id="connectButton" mnemonicParsing="false" text="Connect"/>
+                        <Circle fx:id="connectionIndicator" fill="#ffb01e" radius="10.0" strokeType="INSIDE"
+                                HBox.hgrow="NEVER">
+                            <HBox.margin>
+                                <Insets top="2.0"/>
+                            </HBox.margin>
+                        </Circle>
                     </children>
                     <padding>
                         <Insets left="35.0" top="10.0"/>
@@ -79,7 +86,7 @@
                     <children>
                         <Label text="Keyword"/>
                         <TextField fx:id="keyword" maxHeight="25.0" minHeight="25.0" prefHeight="25.0"
-                                   prefWidth="618.0"/>
+                                   prefWidth="590.0"/>
                         <Button fx:id="searchButton" mnemonicParsing="false" text="Search"/>
                     </children>
                     <padding>
@@ -93,17 +100,17 @@
                             <columns>
                                 <TableColumn prefWidth="118.0" text="Speed">
                                     <cellValueFactory>
-                                        <PropertyValueFactory property="speed" />
+                                        <PropertyValueFactory property="speed"/>
                                     </cellValueFactory>
                                 </TableColumn>
                                 <TableColumn prefWidth="215.0" text="Hostname">
                                     <cellValueFactory>
-                                        <PropertyValueFactory property="hostname" />
+                                        <PropertyValueFactory property="hostname"/>
                                     </cellValueFactory>
                                 </TableColumn>
                                 <TableColumn prefWidth="403.0" text="Filename">
                                     <cellValueFactory>
-                                        <PropertyValueFactory property="filename" />
+                                        <PropertyValueFactory property="filename"/>
                                     </cellValueFactory>
                                 </TableColumn>
                             </columns>
@@ -130,10 +137,10 @@
                         <Insets left="25.0" right="25.0"/>
                     </padding>
                 </Separator>
-                <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                <HBox prefHeight="37.0" prefWidth="734.0" spacing="10.0">
                     <children>
                         <Label text="Command"/>
-                        <TextField fx:id="command" prefHeight="25.0" prefWidth="610.0"/>
+                        <TextField fx:id="command" prefHeight="27.0" prefWidth="593.0"/>
                         <Button fx:id="enterButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0"
                                 text="Enter"/>
                     </children>
@@ -143,7 +150,7 @@
                 </HBox>
                 <HBox prefHeight="200.0" prefWidth="200.0">
                     <children>
-                        <TextArea fx:id="ftpOutput" prefHeight="120.0" prefWidth="737.0"/>
+                        <TextArea fx:id="ftpOutput" prefHeight="34.0" prefWidth="737.0"/>
                     </children>
                     <padding>
                         <Insets left="35.0" top="10.0"/>
